fixed heading on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -285,7 +285,8 @@ body {
         padding: 30px;
     }
     .header h1 {
-        font-size: 2.8rem;
+        font-size: 2.2rem;
+        letter-spacing: -1px
     }
     .header p {
         font-size: 1rem;
@@ -357,6 +358,8 @@ body {
     }
     .header h1 {
         font-size: 1.4rem;
+        letter-spacing: -0.5px;
+        white-space: nowrap;
     }
     .header p {
         font-size: 0.6rem;
@@ -364,7 +367,7 @@ body {
     .nav-overlay button {
         /*padding: 6px 10px;*/
         font-size: 0.75rem;
-        margin-right: 2px;
+        margin-right: -4px;
     }
     .detail-page-content {
         padding: 60px 15px;
